# aria

./: Cargo.toml  Makefile  README.md  config.lua  config.yaml  deno.json  package.json
lua/: aria.lua
src/: config.rs  learn.rs  main.rs  main2.rs  oldmain.rs
src/aria/: apply.rs  install.rs  mod.rs
src/core/: mod.rs  parser.rs  run.rs
src/modules/: aur.rs  mod.rs  pacman.rs
