[package]
name = "aria"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
mlua = {version = "0.11.5", features = ["lua54", "serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
